--- a/index.css
+++ b/index.css
@@ -136,10 +136,6 @@ button {
     margin: 1rem auto;
 }
 
-canvas {
-    min-width: 1000px;
-}
-
 input, select {
     font-size: 1rem;
     width: 100%;
@@ -151,4 +147,8 @@ input, select {
     background-color: var(--input-background);
     color: var(--text-color);
     margin-bottom: 1rem;
+}
+
+.el-grapho-wrapper {
+    background-color: #444654;
 }
